hphp/test/quick/final_class.php.expectf
HipHop Fatal error: Class D may not inherit from final class (C) in %s on line 6
